--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -28,6 +28,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plotly' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plotly\u001b[39m.\u001b[39mcolors\u001b[39m.\u001b[39mqualitative\u001b[39m.\u001b[39mDark24\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plotly' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plotly.colors.qualitative.Dark24"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 121,
    "metadata": {},
    "outputs": [],
@@ -3371,124 +3399,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Package                       Version\n",
-      "----------------------------- -----------\n",
-      "altair                        5.0.1\n",
-      "asttokens                     2.2.1\n",
-      "attrs                         23.1.0\n",
-      "backcall                      0.2.0\n",
-      "backports.functools-lru-cache 1.6.5\n",
-      "blinker                       1.6.2\n",
-      "cachetools                    5.3.1\n",
-      "certifi                       2023.7.22\n",
-      "charset-normalizer            3.2.0\n",
-      "click                         8.1.6\n",
-      "colorama                      0.4.6\n",
-      "debugpy                       1.5.1\n",
-      "decorator                     5.1.1\n",
-      "executing                     1.2.0\n",
-      "fastjsonschema                2.17.1\n",
-      "filelock                      3.12.2\n",
-      "fsspec                        2023.6.0\n",
-      "funcy                         2.0\n",
-      "gensim                        4.3.1\n",
-      "gitdb                         4.0.10\n",
-      "GitPython                     3.1.32\n",
-      "huggingface-hub               0.16.4\n",
-      "idna                          3.4\n",
-      "importlib-metadata            6.8.0\n",
-      "ipykernel                     6.15.0\n",
-      "ipython                       8.14.0\n",
-      "jedi                          0.18.2\n",
-      "Jinja2                        3.1.2\n",
-      "joblib                        1.3.1\n",
-      "jsonschema                    4.18.4\n",
-      "jsonschema-specifications     2023.7.1\n",
-      "jupyter_client                8.3.0\n",
-      "jupyter_core                  5.3.1\n",
-      "llvmlite                      0.40.1\n",
-      "markdown-it-py                3.0.0\n",
-      "MarkupSafe                    2.1.3\n",
-      "matplotlib-inline             0.1.6\n",
-      "mdurl                         0.1.2\n",
-      "mpmath                        1.3.0\n",
-      "nbformat                      5.9.1\n",
-      "nest-asyncio                  1.5.6\n",
-      "networkx                      3.1\n",
-      "numba                         0.57.1\n",
-      "numexpr                       2.8.4\n",
-      "numpy                         1.24.4\n",
-      "packaging                     23.1\n",
-      "pandas                        2.0.3\n",
-      "parso                         0.8.3\n",
-      "pickleshare                   0.7.5\n",
-      "Pillow                        9.5.0\n",
-      "pip                           23.1.2\n",
-      "platformdirs                  3.9.1\n",
-      "plotly                        5.15.0\n",
-      "prompt-toolkit                3.0.39\n",
-      "protobuf                      4.23.4\n",
-      "psutil                        5.9.0\n",
-      "pure-eval                     0.2.2\n",
-      "pyarrow                       12.0.1\n",
-      "pydeck                        0.8.0\n",
-      "Pygments                      2.15.1\n",
-      "pyLDAvis                      3.4.1\n",
-      "Pympler                       1.0.1\n",
-      "pynndescent                   0.5.10\n",
-      "python-dateutil               2.8.2\n",
-      "pytz                          2023.3\n",
-      "pytz-deprecation-shim         0.1.0.post0\n",
-      "pywin32                       305.1\n",
-      "PyYAML                        6.0.1\n",
-      "pyzmq                         25.1.0\n",
-      "referencing                   0.30.0\n",
-      "regex                         2023.6.3\n",
-      "requests                      2.31.0\n",
-      "rich                          13.4.2\n",
-      "rpds-py                       0.9.2\n",
-      "safetensors                   0.3.1\n",
-      "scikit-learn                  1.3.0\n",
-      "scipy                         1.11.1\n",
-      "setuptools                    67.8.0\n",
-      "six                           1.16.0\n",
-      "smart-open                    6.3.0\n",
-      "smmap                         5.0.0\n",
-      "stack-data                    0.6.2\n",
-      "streamlit                     1.25.0\n",
-      "sympy                         1.12\n",
-      "tenacity                      8.2.2\n",
-      "threadpoolctl                 3.2.0\n",
-      "tokenizers                    0.13.3\n",
-      "toml                          0.10.2\n",
-      "toolz                         0.12.0\n",
-      "torch                         2.0.1\n",
-      "tornado                       6.2\n",
-      "tqdm                          4.65.0\n",
-      "traitlets                     5.9.0\n",
-      "transformers                  4.31.0\n",
-      "typing_extensions             4.7.1\n",
-      "tzdata                        2023.3\n",
-      "tzlocal                       4.3.1\n",
-      "umap-learn                    0.5.3\n",
-      "urllib3                       2.0.4\n",
-      "validators                    0.20.0\n",
-      "watchdog                      3.0.0\n",
-      "wcwidth                       0.2.6\n",
-      "wheel                         0.38.4\n",
-      "zipp                          3.16.2\n"
+      "Collecting einops\n",
+      "  Downloading einops-0.6.1-py3-none-any.whl (42 kB)\n",
+      "     -------------------------------------- 42.2/42.2 kB 410.2 kB/s eta 0:00:00\n",
+      "Installing collected packages: einops\n",
+      "Successfully installed einops-0.6.1\n"
      ]
     }
    ],
    "source": [
-    "!pip list"
+    "!pip3 install einops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading (…)okenizer_config.json: 100%|██████████| 649/649 [00:00<?, ?B/s] \n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "\nLlamaTokenizer requires the SentencePiece library but it was not found in your environment. Checkout the instructions on the\ninstallation page of its repo: https://github.com/google/sentencepiece#installation and follow the ones\nthat match your environment. Please note that you may need to restart your runtime after installation.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtransformers\u001b[39;00m \u001b[39mimport\u001b[39;00m AutoModelForCausalLM, AutoTokenizer, pipeline\n\u001b[1;32m----> 4\u001b[0m tokenizer \u001b[39m=\u001b[39m AutoTokenizer\u001b[39m.\u001b[39;49mfrom_pretrained(\u001b[39m\"\u001b[39;49m\u001b[39mstabilityai/FreeWilly2\u001b[39;49m\u001b[39m\"\u001b[39;49m, use_fast\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m      5\u001b[0m model \u001b[39m=\u001b[39m AutoModelForCausalLM\u001b[39m.\u001b[39mfrom_pretrained(\u001b[39m\"\u001b[39m\u001b[39mstabilityai/FreeWilly2\u001b[39m\u001b[39m\"\u001b[39m, torch_dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat16, low_cpu_mem_usage\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, device_map\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m system_prompt \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m### System:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mYou are Free Willy, an AI that follows instructions extremely well. Help as much as you can. Remember, be safe, and don\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt do anything illegal.\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\water\\OneDrive\\Documents\\GitHub\\arXiv-ml-explorer\\.conda\\Lib\\site-packages\\transformers\\models\\auto\\tokenization_auto.py:702\u001b[0m, in \u001b[0;36mAutoTokenizer.from_pretrained\u001b[1;34m(cls, pretrained_model_name_or_path, *inputs, **kwargs)\u001b[0m\n\u001b[0;32m    698\u001b[0m     \u001b[39mif\u001b[39;00m tokenizer_class \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    699\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    700\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTokenizer class \u001b[39m\u001b[39m{\u001b[39;00mtokenizer_class_candidate\u001b[39m}\u001b[39;00m\u001b[39m does not exist or is not currently imported.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    701\u001b[0m         )\n\u001b[1;32m--> 702\u001b[0m     \u001b[39mreturn\u001b[39;00m tokenizer_class\u001b[39m.\u001b[39;49mfrom_pretrained(pretrained_model_name_or_path, \u001b[39m*\u001b[39minputs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    704\u001b[0m \u001b[39m# Otherwise we have to be creative.\u001b[39;00m\n\u001b[0;32m    705\u001b[0m \u001b[39m# if model is an encoder decoder, the encoder tokenizer class is used by default\u001b[39;00m\n\u001b[0;32m    706\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(config, EncoderDecoderConfig):\n",
+      "File \u001b[1;32mc:\\Users\\water\\OneDrive\\Documents\\GitHub\\arXiv-ml-explorer\\.conda\\Lib\\site-packages\\transformers\\utils\\import_utils.py:1039\u001b[0m, in \u001b[0;36mDummyObject.__getattribute__\u001b[1;34m(cls, key)\u001b[0m\n\u001b[0;32m   1037\u001b[0m \u001b[39mif\u001b[39;00m key\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m key \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m_from_config\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m   1038\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__getattribute__\u001b[39m(key)\n\u001b[1;32m-> 1039\u001b[0m requires_backends(\u001b[39mcls\u001b[39;49m, \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49m_backends)\n",
+      "File \u001b[1;32mc:\\Users\\water\\OneDrive\\Documents\\GitHub\\arXiv-ml-explorer\\.conda\\Lib\\site-packages\\transformers\\utils\\import_utils.py:1027\u001b[0m, in \u001b[0;36mrequires_backends\u001b[1;34m(obj, backends)\u001b[0m\n\u001b[0;32m   1025\u001b[0m failed \u001b[39m=\u001b[39m [msg\u001b[39m.\u001b[39mformat(name) \u001b[39mfor\u001b[39;00m available, msg \u001b[39min\u001b[39;00m checks \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m available()]\n\u001b[0;32m   1026\u001b[0m \u001b[39mif\u001b[39;00m failed:\n\u001b[1;32m-> 1027\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(failed))\n",
+      "\u001b[1;31mImportError\u001b[0m: \nLlamaTokenizer requires the SentencePiece library but it was not found in your environment. Checkout the instructions on the\ninstallation page of its repo: https://github.com/google/sentencepiece#installation and follow the ones\nthat match your environment. Please note that you may need to restart your runtime after installation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"stabilityai/FreeWilly2\", use_fast=False)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"stabilityai/FreeWilly2\", torch_dtype=torch.float16, low_cpu_mem_usage=True, device_map=\"auto\")\n",
+    "system_prompt = \"### System:\\nYou are Free Willy, an AI that follows instructions extremely well. Help as much as you can. Remember, be safe, and don't do anything illegal.\\n\\n\"\n",
+    "\n",
+    "message = \"Write me a poem please\"\n",
+    "prompt = f\"{system_prompt}### User: {message}\\n\\n### Assistant:\\n\"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(\"cuda\")\n",
+    "output = model.generate(**inputs, do_sample=True, top_p=0.95, top_k=0, max_new_tokens=256)\n",
+    "\n",
+    "print(tokenizer.decode(output[0], skip_special_tokens=True))\n"
    ]
   }
  ],
