--- a/notebooks/debug2.ipynb
+++ b/notebooks/debug2.ipynb
@@ -265,7 +265,18 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1. What is the main finding of the paper?\\n    2. What is the contribution of the paper to the field of NLP?\\n    3. What are some of the limitations of the paper?\\n    4. Can you briefly explain the proposed method for training Conformer LLMs?\\n    5. How does the proposed method compare to other state-of-the-art language models in terms of performance?\\n    6. What are some potential applications of Conformer LLMs in NLP?\\n    7. How does the paper address the issue of overfitting in LLMs?\\n    8. Can you discuss the effect of hyperparameter tuning on the performance of Conformer LLM'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "def askLLAMAv2(topic):\n",
@@ -290,6 +301,131 @@
     "\n",
     "    return final_result\n",
     "askLLAMAv2(\"This research paper Conformer LLMs -- Convolution Augmented Large Language Models was published 21 days ago. Tell us some insights based causal variables latent effect inference treatment\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                       Version\n",
+      "----------------------------- -----------\n",
+      "accelerate                    0.21.0\n",
+      "altair                        5.0.1\n",
+      "asttokens                     2.2.1\n",
+      "attrs                         23.1.0\n",
+      "backcall                      0.2.0\n",
+      "backports.functools-lru-cache 1.6.5\n",
+      "blinker                       1.6.2\n",
+      "cachetools                    5.3.1\n",
+      "certifi                       2023.7.22\n",
+      "charset-normalizer            3.2.0\n",
+      "click                         8.1.6\n",
+      "colorama                      0.4.6\n",
+      "debugpy                       1.5.1\n",
+      "decorator                     5.1.1\n",
+      "einops                        0.6.1\n",
+      "executing                     1.2.0\n",
+      "fastjsonschema                2.17.1\n",
+      "filelock                      3.12.2\n",
+      "fsspec                        2023.6.0\n",
+      "funcy                         2.0\n",
+      "gensim                        4.3.1\n",
+      "gitdb                         4.0.10\n",
+      "GitPython                     3.1.32\n",
+      "huggingface-hub               0.16.4\n",
+      "idna                          3.4\n",
+      "importlib-metadata            6.8.0\n",
+      "ipykernel                     6.15.0\n",
+      "ipython                       8.14.0\n",
+      "jedi                          0.18.2\n",
+      "Jinja2                        3.1.2\n",
+      "joblib                        1.3.1\n",
+      "jsonschema                    4.18.4\n",
+      "jsonschema-specifications     2023.7.1\n",
+      "jupyter_client                8.3.0\n",
+      "jupyter_core                  5.3.1\n",
+      "llvmlite                      0.40.1\n",
+      "markdown-it-py                3.0.0\n",
+      "MarkupSafe                    2.1.3\n",
+      "matplotlib-inline             0.1.6\n",
+      "mdurl                         0.1.2\n",
+      "mpmath                        1.3.0\n",
+      "nbformat                      5.9.1\n",
+      "nest-asyncio                  1.5.6\n",
+      "networkx                      3.1\n",
+      "numba                         0.57.1\n",
+      "numexpr                       2.8.4\n",
+      "numpy                         1.24.4\n",
+      "packaging                     23.1\n",
+      "pandas                        2.0.3\n",
+      "parso                         0.8.3\n",
+      "pickleshare                   0.7.5\n",
+      "Pillow                        9.5.0\n",
+      "pip                           23.1.2\n",
+      "platformdirs                  3.9.1\n",
+      "plotly                        5.15.0\n",
+      "prompt-toolkit                3.0.39\n",
+      "protobuf                      4.23.4\n",
+      "psutil                        5.9.0\n",
+      "pure-eval                     0.2.2\n",
+      "pyarrow                       12.0.1\n",
+      "pydeck                        0.8.0\n",
+      "Pygments                      2.15.1\n",
+      "pyLDAvis                      3.4.1\n",
+      "Pympler                       1.0.1\n",
+      "pynndescent                   0.5.10\n",
+      "python-dateutil               2.8.2\n",
+      "pytz                          2023.3\n",
+      "pytz-deprecation-shim         0.1.0.post0\n",
+      "pywin32                       305.1\n",
+      "PyYAML                        6.0.1\n",
+      "pyzmq                         25.1.0\n",
+      "referencing                   0.30.0\n",
+      "regex                         2023.6.3\n",
+      "requests                      2.31.0\n",
+      "rich                          13.4.2\n",
+      "rpds-py                       0.9.2\n",
+      "safetensors                   0.3.1\n",
+      "scikit-learn                  1.3.0\n",
+      "scipy                         1.11.1\n",
+      "sentencepiece                 0.1.99\n",
+      "setuptools                    67.8.0\n",
+      "six                           1.16.0\n",
+      "smart-open                    6.3.0\n",
+      "smmap                         5.0.0\n",
+      "stack-data                    0.6.2\n",
+      "streamlit                     1.25.0\n",
+      "sympy                         1.12\n",
+      "tenacity                      8.2.2\n",
+      "threadpoolctl                 3.2.0\n",
+      "tokenizers                    0.13.3\n",
+      "toml                          0.10.2\n",
+      "toolz                         0.12.0\n",
+      "torch                         2.0.1\n",
+      "tornado                       6.2\n",
+      "tqdm                          4.65.0\n",
+      "traitlets                     5.9.0\n",
+      "transformers                  4.31.0\n",
+      "typing_extensions             4.7.1\n",
+      "tzdata                        2023.3\n",
+      "tzlocal                       4.3.1\n",
+      "umap-learn                    0.5.3\n",
+      "urllib3                       2.0.4\n",
+      "validators                    0.20.0\n",
+      "watchdog                      3.0.0\n",
+      "wcwidth                       0.2.6\n",
+      "wheel                         0.38.4\n",
+      "zipp                          3.16.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 list"
    ]
   },
   {
