--- a/notebooks/debug2.ipynb
+++ b/notebooks/debug2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,23 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df2\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df2' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
      ]
     }
    ],
    "source": [
-    "df2"
+    "print(\"test\")"
    ]
   },
   {
